--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
         "start": "node .output/server/index.mjs"
     },
     "devDependencies": {
-        "nuxt": "3.0.0-rc.4"
+        "@types/prettier": "^2.7.0",
+        "@types/tailwindcss": "^3.1.0",
+        "autoprefixer": "^10.4.8",
+        "nuxt": "^3.0.0-rc.9",
+        "postcss": "^8.4.16",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
+        "sass": "^1.54.8",
+        "tailwindcss": "^3.1.8"
     },
     "dependencies": {
-        "element-plus": "^2.2.5"
+        "element-plus": "^2.2.16"
     }
 }
